# Diana-Just-Eat

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Ordering-System-Client.cbp  README.md  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-862c0ce2e29858b86a02.json  cmakeFiles-v1-3a4ebe0f3cf99e73a6cc.json  codemodel-v2-ff314f74b5a468407e38.json  index-2020-05-30T04-40-49-0224.json  target-Ordering-System-Client-Debug-5480e96d0095248c05f4.json  target-Ordering-System-Client_autogen-Debug-68d6e591d8d7a8ad482f.json
Client/Ordering-System-Client/: CMakeLists.txt  CMakeLists.txt.user.5147f56  CMakeLists.txt.user.b736c76  Dish.cpp  Dish.h  EncryptDecrypt.h  StatusClient.cpp  StatusClient.h  TcpHeart.cpp  TcpHeart.h  cartitem.cpp  cartitem.h  clientmainwindow.cpp  clientmainwindow.h  clientmainwindow.ui  config.json  dialogcartview.cpp  dialogcartview.h  dialogcheckout.cpp  dialogcheckout.h  dialogsettings.cpp  dialogsettings.h  httpfiledownload.cpp  httpfiledownload.h  main.cpp  mybutton.cpp  mybutton.h  myspinbox.cpp  myspinbox.h  myspinboxdelegate.cpp  myspinboxdelegate.h  readjson.cpp  readjson.h  res.qrc  tcpclient.cpp  tcpclient.h  timestamp.cpp  timestamp.h  writejson.cpp  writejson.h
Client/build-Ordering-System-Client-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: CMakeCache.txt  Makefile  Ordering-System-Client.cbp  cmake_install.cmake
Client/build-Ordering-System-Client-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-d8610a16dfd5683ddd5f.json  cmakeFiles-v1-591df3497a50f5179a6d.json  codemodel-v2-5a932ec96d84b508368b.json  index-2020-05-28T13-17-12-0770.json  target-Ordering-System-Client-Debug-15c902ba12fe895c018a.json  target-Ordering-System-Client_autogen-Debug-c4b547c0994c6274f519.json
Client/build-Ordering-System-Client-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/Ordering-System-Client_autogen/: moc_predefs.h  mocs_compilation.cpp
Client/build-Ordering-System-Client-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/Ordering-System-Client_autogen/EWIEGA46WW/: moc_clientmainwindow.cpp
Client/build-Ordering-System-Client-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/Ordering-System-Client_autogen/include/: ui_clientmainwindow.h
Server/Ordering-System-Server/: CMakeLists.txt  CMakeLists.txt.user.5147f56  CMakeLists.txt.user.b736c76  DialogEditMenuType.cpp  DialogEditMenuType.h  Dish.cpp  EditAreaWidget.cpp  EditAreaWidget.h  EncryptDecrypt.cpp  EncryptDecrypt.h  MenuInfo.db  Operation.cpp  Operation.h  SimpleWebServer.cpp  SimpleWebServer.h  StatusServer.cpp  StatusServer.h  TcpServer.cpp  TcpServer.h  config.json  convertpic.cpp  convertpic.h  dialogaddrecord.cpp  dialogaddrecord.h  dialogchartview.cpp  dialogchartview.h  dialogeditrecord.cpp  dialogeditrecord.h  dialoghistoryviewer.cpp  dialoghistoryviewer.h  dialogordersviewer.cpp  dialogordersviewer.h  httpfileload.cpp  httpfileload.h  httpfileupdate.cpp  httpfileupdate.h  main.cpp  mybutton.cpp  mydatetimeselect.cpp  mydatetimeselect.h  (+11 more)
Server/Ordering-System-Server/3rd/qhttpserver/lib/: qhttpserver.lib  qhttpserverd.lib
